--- a/client/src/assets/css/App.css
+++ b/client/src/assets/css/App.css
@@ -63,7 +63,7 @@ body {
   color: black;
   position: absolute;
   bottom: -35px;
-  left: -5px;
+  left: 53%;
   padding: 8px;
   cursor: pointer;
 }
